@@ -11,4 +11,5 @@ META.yml
 README
 t/pod-coverage.t
 t/pod.t
+t/script1.t
 t/use.t
