@@ -1,16 +1,15 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.03
+# Note: this file was auto-generated by Module::Build::Compat version 0.32
 use ExtUtils::MakeMaker;
 WriteMakefile
 (
-          'PL_FILES' => {},
-          'INSTALLDIRS' => 'site',
           'NAME' => 'HTML::Links::Localize',
-          'EXE_FILES' => [
-                           'html-to-hd'
-                         ],
           'VERSION_FROM' => 'lib/HTML/Links/Localize.pm',
           'PREREQ_PM' => {
                            'HTML::Parser' => 0
-                         }
+                         },
+          'INSTALLDIRS' => 'site',
+          'EXE_FILES' => [
+                           'html-to-hd'
+                         ]
         )
 ;
